# fleam-backend

./: .gitmodules  README-DEV.md  README.md  Untitled.ipynb  build_services.sh  docker-compose.yml  fleam-deploy-gateway.postman_collection.json
account-service/: pom.xml
account-service/src/main/resources/: application-dev.properties  application-prod.properties
config-server/: pom.xml
config-server/src/main/resources/: application.properties
discovery-server/: pom.xml
discovery-server/src/main/resources/: application.properties
eureka-server/: Dockerfile  pom.xml
eureka-server/src/main/resources/: application.yml
gateway-service/: pom.xml
gateway-service/src/main/resources/: application.yaml  (+2 more)
member-service/: Dockerfile  pom.xml
movie-service/: Dockerfile  pom.xml
postgres-data/: postmaster.pid
postgres-data/base/16384/: 1247  1249  1249_fsm  1259  16385  16388  16390  16393  16395  16399  16400  16402  16405  16407  16409  16411  16413  2224  24577  24581  24582  24584  2579  2604  2606  2608  2608_fsm  2610  2610_fsm  2619  2619_fsm  2619_vm  2620  2620_fsm  2620_vm  2656  2657  2658  2659  2662  (+44 more)
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
postgres-data/pg_xact/: 0000
recommendation-service/: Dockerfile  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml
recommendation-service/recompy/: FunkSVD.py  __init__.py
recommendation-service/src/: cli.py  eureka.py  logging.py  main.py  recommend.py
template_service/: pom.xml
(+89 files in other folders)
