[tool.poetry]
name = "fleam-recommender"
version = "0.1.0"
description = ""
authors = ["Mert Can Demir <validatedev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.13"
fastapi = "^0.78.0"
click = "^8.1.3"
uvicorn = "^0.17.6"
py-eureka-client = "^0.10.5"
numpy = "^1.22.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
